bk_ida/gccida/c3/cleanup_barriers
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:571:4: error: expected ';' after expression
rtx v2; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:571:5: error: use of undeclared identifier 'v2'
rtx v2; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:580:1: error: use of undeclared identifier 'v2'
v2 = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:582:17: error: use of undeclared identifier 'v2'
if ( *( _WORD *)v2 == 35 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:584:35: error: use of undeclared identifier 'v2'
nonnote_insn = prev_nonnote_insn( v2); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:587:17: error: use of undeclared identifier 'v2'
if ( *( _WORD *)v2 != 35 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:589:14: error: use of undeclared identifier 'v2'
delete_insn( v2); 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:591:47: error: use of undeclared identifier 'v2'
else if ( nonnote_insn != (  struct rtx_def *)v2[1] ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:593:16: error: use of undeclared identifier 'v2'
reorder_insns( v2, v2, nonnote_insn); 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/jump.c:593:20: error: use of undeclared identifier 'v2'
reorder_insns( v2, v2, nonnote_insn); 
                   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_barriers/src/obj/jump.o] Error 1
